css/_ui.less
select, button, a, a:visited { -webkit-tap-highlight-color:rgba(0,0,0,0); border:none; -webkit-appearance: none; text-decoration:none; color:inherit; }

body {
    -webkit-text-size-adjust: none;
}

// Mixin
.box-sizing {
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
}
///


div {
  // applying this to divs prevents transtion flicker in ios
  -webkit-transform-style:preserve-3d;
  -webkit-perspective:1000px;
  -webkit-backface-visibility: hidden;
}


#flight {
  -webkit-transform-style:flat!important;
  -webkit-perspective:0px!important;
}

.toolbar {
  .box-sizing;
  left:0;
  padding:0;
  position:absolute;
  text-align:center;
  top:0;
  width:100%;
  height:48px;
  z-index:2;
}

.panel {
  display: none;
  height: 100%;  
  left:0;
  position: absolute;
  top:0;    
  width:100%;  
  .box-sizing;
    &.visible {
      display: block;
    }
}

.content {
  padding-top: 50px;
  background: #f1ebe2;
  position: absolute;
  width:100%;
  z-index: 1;
}

.wrapper {
  bottom:0px;
  left:0;
  position:absolute;
  top:50px;
  overflow:auto;
  width:100%;
  z-index:1;
}

.scroller {
  .box-sizing;
  position:absolute;  
  -webkit-tap-highlight-color:rgba(0,0,0,0);  
  width:100%;
  z-index:1;
}

.fixed-top {
  position: fixed;
}

